--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>N.M's Portfolio</title>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="https://naoya70876.github.io/portfolio-design/design.css">
+  <script type="text/javascript" src="script-portfolio-design.js"></script>
+</head>
+<body>
 
+  <!--header-->
+  <header>
+    <span class="fa fa-bars menu-icon"></span>
+    <h1 class="header-logo">N.M's Portfolio</h1>
+  </header>
+
+  <!--first-wrapper-->
+  <div class="first-wrapper">
+    <div class="design">
+      <h1 class="design-logo">Design</h1>
+    </div>
+    <img class="design-image" src="https://naoya70876.github.io/portfolio-design/design.png">
+    <div class="design-contents">
+      <div class="design-item">
+        <img class="design-a" src="https://naoya70876.github.io/portfolio-design/nostalgic%20nova%20flyer%201%2020191113.jpg">
+        <img class="design-b" src="https://naoya70876.github.io/portfolio-design/2020%20April%20calendar.jpg">
+        <img class="design-c" src="https://naoya70876.github.io/portfolio-design/etcetera-compilation.png">
+        <img class="design-d" src="https://naoya70876.github.io/portfolio-design/suyd%20ロゴ１(青・背景白).jpg">
+        <img class="design-e" src="https://naoya70876.github.io/portfolio-design/exy%20logo(背景白)4.png">
+      </div>
+    </div>
+    
+    <div class="profile">
+      <h1 class="profile-logo">Profile</h1>
+      <img class="profile-image" src="https://naoya70876.github.io/portfolio-design/IMG_5153.JPG">
+      <div class="profile-text">
+        <h1>松田 直弥 (Naoya Matsuda)</h1>
+        <h2>1992年、東京出身。
+          <br>高校卒業時に知人からベースを譲り受けたことをきっかけに音楽に興味を持つ。
+          <br>the band apartやLITE、downyなどに影響を受け作曲を始める。
+          <br>大学卒業後にhygiaを初めとするバンド・ソロ活動を始める。
+          <br>その他、ライブ写真・アーティスト写真撮影やフライヤー作成など活動の幅を広げている。
+        </h2>
+      </div>
+    </div>
+    <dix class="footer-copy">
+      <span class="fa fa-bars menu-icon"></span>
+      <a class="footer-logo-copy" href="https://naoya70876.github.io/portfolio-top/">N.M's Portfolio</a>
+    </dix>
+  </div>
+
+  <!--second-wrapper-->
+
+  <!--footer-->
+  <footer>
+    <span class="fa fa-bars menu-icon"></span>
+    <a class="footer-logo" href="https://naoya70876.github.io/portfolio-top/">N.M's Portfolio</a>
+  </footer>
+
+</body>
+</html>
